I was able to restrict the form inputs so people can only put numeric values in the numeric fields, and set max and mins. I added some flavor text to the form output page so it doesnt just say 0 or 1, and I made the button a little nicer (although I think it could still be improved, idk why its so long). Also some of the buttons were broken on the main page so I fixed those.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -59,3 +59,17 @@ body {
   }
   }
   
+  label {
+    cursor: pointer;
+    filter: grayscale(100%);
+  }
+  label:hover {
+    filter: grayscale(0);
+  }
+  input[type="radio"]:checked + label {
+    filter: grayscale(0);
+  }
+  .cimage {
+    width: 300px;
+    height: 250px;
+  }
